--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.datasource.url = jdbc:mysql://sql11.freemysqlhosting.net/sql11426435?serverTimezone=UTC
-spring.datasource.username = sql11426435
-spring.datasource.password = YiSEEFRbBd
+spring.datasource.url = jdbc:mysql://remotemysql.com/lcxlrE1ZN3?serverTimezone=UTC
+spring.datasource.username = lcxlrE1ZN3
+spring.datasource.password = ilV1TZTevp
 
-#spring.datasource.url = jdbc:mysql://remotemysql.com/lcxlrE1ZN3?serverTimezone=UTC
-#spring.datasource.username = lcxlrE1ZN3
-#spring.datasource.password = ilV1TZTevp
+#spring.datasource.url = jdbc:mysql://sql11.freemysqlhosting.net/sql11426435?serverTimezone=UTC
+#spring.datasource.username = sql11426435
+#spring.datasource.password = YiSEEFRbBd
+
 
 #spring.datasource.url=jdbc:postgresql://ec2-54-155-92-75.eu-west-1.compute.amazonaws.com:5432/d5hnjdq8et6s3g
 #spring.datasource.username=rbeaslytrvndni
